# learning-rust

./: .gitignore  control.rs  exceptions.rs  files.rs  func.rs  generic.rs  helloworld.rs  lifetime.rs  macros.rs  modules.rs  process.rs  scope.rs  standards.rs  threads.rs  traits.rs  types.rs
my_project/: Cargo.toml
my_project/src/: main.rs
